create register user,register user form,form errors,message errors,register validation email,login,reset password,validation reset password

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,7 @@ $(document).ready(function() {
 
 {% include 'includes/navbar.html' %}
 
+{% include 'includes/alert.html' %}
 {% block content %}
 {% endblock %}
 
