create cart checkout

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,9 @@
 <!-- custom javascript -->
 <script src="{% static 'js/script.js'%}" type="text/javascript"></script>
 
+<!-- Paypal Script -->
+<script src="https://www.paypal.com/sdk/js?client-id=AVR_ezvnQPAY6ZH35FbsvAXZdRHTorLLe7s3GbC_50HkHpjrYCe-QpgCt_2V_7F5POacLNVCjigWdUHW&currency=USD"></script>
+
 <script type="{% static 'text/javascript'%}">
 /// some script
 
