--- a/templates/carts/cart.html
+++ b/templates/carts/cart.html
@@ -79,7 +79,7 @@
     
             <div class="card">
             <div class="card-body">
-                <dl class="dlist-align"
+                <dl class="dlist-align">
                   <dt>Total price:</dt>
                   <dd class="text-right">&pound;{{ total_amount|floatformat:2}}</dd>
                 </dl>
