--- a/templates/carts/checkout.html
+++ b/templates/carts/checkout.html
@@ -6,7 +6,7 @@
     <div class="container">
     
     <!-- ============================ COMPONENT 1 ================================= -->
-    <form action="" method="POST">
+    <form action="{% url 'payment'  %}" method="POST">
         {% csrf_token %}
     <div class="row">
         <aside class="col-lg-6">
@@ -16,56 +16,56 @@
             <div class="form-row">
                 <div class="form-group col">
                     <label for="">First Name</label>
-                    <input type="text" name="first_name" class="form-control" required value="{{current_user.first_name}}">
+                    {{form.first_name}}
                 </div>
 
                 <div class="form-group col">
                     <label for="">Last Name</label>
-                    <input type="text" name="last_name" class="form-control" required>
+                    {{form.last_name}}
                 </div>
                 </div>
                 <div class="form-row">
                 <div class="form-group col">
                     <label for="">Email</label>
-                    <input type="text" name="Email" class="form-control" required>
+                    {{form.email}}
                 </div>
 
                 <div class="form-group col">
                     <label for="">Phone Number</label>
-                    <input type="text" name="phone" class="form-control" required>
+                   {{form.phone}}
                 </div>
                     </div>
                     <div class="form-row">
                 <div class="form-group col">
                     <label for="">Address Line 1</label>
-                    <input type="text" name="address_line_1" class="form-control" required>
+                    {{form.address_line_1}}
                 </div>
 
                 <div class="form-group col">
                     <label for="">Address Line 2</label>
-                    <input type="text" name="Address_line_2" class="form-control" >
+                    {{form.address_line_2}}
                 </div>
                 </div>
                 <div class="form-row">
                 <div class="form-group col">
-                    <label for="">City</label>
-                    <input type="text" name="City" class="form-control" required>
+                    <label for="">Post Code</label>
+                    {{form.postcode}}
                 </div>
 
                 <div class="form-group col">
-                    <label for="">County</label>
-                    <input type="text" name="county" class="form-control" required>
+                    <label for="">City</label>
+                   {{form.city}}
                 </div>
 
                 <div class="form-group col">
                     <label for="">Country</label>
-                    <input type="text" name="country" class="form-control" required >
+                   {{form.country}}
                 </div>
                 </div>
 
             <div class="form-row">
                 <label for="">Order Note</label>
-                <textarea name="order_note" id="" cols="30" rows="2" class="form-control"></textarea>
+                {{form.order_note}}
             </div>
            
         
